# ot_markov_distances

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: cu118.yaml  testing-and-docs.yml  testing-publish.yml
experiments/: Coarsening-new.ipynb  Coarsening.ipynb  Learning Graphon.ipynb  Performance.ipynb  Projection.ipynb  SVM.ipynb  classification.py  distance comparison.ipynb  grakel_datasets.yaml
experiments/utils/: __init__.py  data_generation.py  distance_matrix.py  grakel_datasets.py  ksvm_utils.py  modules.py  optimization_loop.py
ot_markov_distances/: __init__.py  discounted_wl.py  misc.py  sinkhorn.py  utils.py  wl.py
staticdocs/source/: basic_usage.rst  bibliography.bib  conf.py  index.rst  notes_gradient.rst
tests/: sinkhorn.py  sparse stuff.ipynb  test_sinkhorn.py  test_sparsity.py  test_wl_optims.py
