[tool.poetry]
name = "ot-markov-distances"
version = "0.1.0"
description = ""
authors = ["Tristan BRUGÈRE <67050900+nephanth@users.noreply.github.com>"]
license = "Cecill-B"
readme = "README.md"
packages = [{include = "ot_markov_distances"}]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.8"
torch = "^1.13.1"
ml_lib = { git="https://github.com/tbrugere/ml_lib.git", branch="main" }

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = { git="https://github.com/executablebooks/MyST-Parser.git", branch="master" }
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
sphinxcontrib-bibtex = "^2.5.0"
sphinx-math-dollar = "^1.2.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pot = "^0.8.2"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
scikit-learn = "^1.2.1"
tqdm = "^4.64.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
