[tool.poetry]
name = "ot-markov-distances"
version = "1.0.4"
description = "Differentiable distances for graphs and markov chains using optimal transport"
authors = ["Tristan BRUGÈRE <67050900+nephanth@users.noreply.github.com>"]
license = "Cecill-B"
readme = "README.rst"
packages = [{include = "ot_markov_distances"}]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.test]
optional = true


[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.1"
torch = "^2.0.0"

[tool.poetry.group.docs.dependencies]
myst-parser = { git="https://github.com/executablebooks/MyST-Parser.git", branch="master" }
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
sphinxcontrib-bibtex = "^2.5.0"
sphinx-math-dollar = "^1.2.1"
setuptools = "^69.0.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pot = "^0.8.2"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
scikit-learn = "^1.2.1"
tqdm = "^4.64.1"
seaborn = "^0.12.2"
pandas = "^1.5.3"
tensorboard = "^2.15.1"
scikit-image = "^0.22.0"
more-itertools = "^10.1.0"
grakel = "^0.1.10"
torch-geometric = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
